<resources>
    <string name="app_name">Day planner</string>
    <string name="hello_blank_fragment">Hello blank fff fragment</string>
    <string name="event_title">Название</string>
    <string name="event_description">Описание</string>
    <string name="fab_continue">continue</string>
    <string name="event_add_json">addEvent</string>
    <string name="event_add">addEvent</string>
    <string name="event_finish">Конец события</string>
    <string name="event_begin">Начало события</string>
    <string name="event_btn_create">Создать</string>

    <string name="event_json_example">"""
                    {
                        “id”:1,
                        “date_start”:”147600000”,
                        “date_finish”:”147610000”,
                        “name”:”My task”,
                        “description”:”Описание моего дела”
                    }
        """
    </string>

    <string name="dialog_add_event_title">Существующие события</string>
    <string name="dialog_add_event_description">События будут добавлены из json файла.\nОбязательно убедитесь, что ваш json файл выглядит подобным образом:</string>

    <string name="dialog_access_storage_tittle">Нужно разрешение</string>
    <string name="dialog_access_storage_description">Приложиению нужен доступ к просмотру файлов на Вашем устройстве. Это необходимо для того чтобы загрузить ваши сохранненные дела в json формате.</string>

    <string name="state_error_something_goes_wrong">Что-то пошло не так, попробуйте еще раз</string>
    <string name="state_error_not_json">Выбранный файл не являтся json объектом"</string>
    <string name="state_error_empty_tittle">Название не должно быть пустым</string>
    <string name="state_error_invalid_time_interval">Неправильный временной интервал</string>

    <string name="state_success_new_event">Было добавлено новое событие</string>
    <string name="state_success_events_from_json">Было добавлено %1$d новых событий</string>

    <string name="permission_granted">Теперь можно добавить события из json</string>
    <string name="permission_declined">Доступ не предоставлен</string>
</resources>