<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screen.createEvent.CreateEventFragment">

    <com.belkanoid.dayplanner.presentation.screen.createEvent.ExtenderNumberPicker
        android:id="@+id/startHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:theme="@style/DefaultNumberPickerTheme"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <com.belkanoid.dayplanner.presentation.screen.createEvent.ExtenderNumberPicker
        android:id="@+id/startMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/DefaultNumberPickerTheme"
        app:layout_constraintBottom_toBottomOf="@+id/startHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.belkanoid.dayplanner.presentation.screen.createEvent.ExtenderNumberPicker
        android:id="@+id/endHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:theme="@style/DefaultNumberPickerTheme"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <com.belkanoid.dayplanner.presentation.screen.createEvent.ExtenderNumberPicker
        android:id="@+id/endMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/DefaultNumberPickerTheme"
        app:layout_constraintBottom_toBottomOf="@+id/endHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <EditText
        android:id="@+id/etTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/event_title"
        android:maxLength="40"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="start"
        android:hint="@string/event_description"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/etTittle"
        app:layout_constraintStart_toStartOf="@+id/etTittle"
        app:layout_constraintTop_toBottomOf="@+id/etTittle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="@color/blue"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/event_btn_create"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/event_begin"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/startHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/event_finish"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/endHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@drawable/rounded_blue_background"
        tools:text="17.01.2024"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>