<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.detailedEvent.DetailedEventFragment">


    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:background="@drawable/rounded_background"
        android:singleLine="true"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="16sp"
        android:hint="@string/event_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="start"
        android:hint="@string/event_description"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvTittle"
        app:layout_constraintStart_toStartOf="@+id/tvTittle"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_blue_background"
        android:padding="8dp"
        tools:text="17.01.2024"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        tools:text="08:02"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical|center_horizontal"
        tools:text="20:25"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabContinue"
        android:backgroundTint="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_continue"
        android:clickable="true"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>